--- a/gestion-mercado/angular.json
+++ b/gestion-mercado/angular.json
@@ -16,19 +16,18 @@
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
-      {
-        "glob": "**/*",
-        "input": "public",
-        "output": "/"
-      },
-      {
-        "glob": "**/*",
-        "input": "src/assets",
-        "output": "/assets"
-      }],
-            "styles": [
-              "src/styles.css"
-            ]
+              {
+                "glob": "**/*",
+                "input": "public",
+                "output": "/"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "/assets"
+              }
+            ],
+            "styles": ["src/styles.css"]
           },
           "configurations": {
             "production": {
@@ -74,19 +73,18 @@
           "options": {
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-      {
-        "glob": "**/*",
-        "input": "public",
-        "output": "/"
-      },
-      {
-        "glob": "**/*",
-        "input": "src/assets",
-        "output": "/assets"
-      }],
-            "styles": [
-              "src/styles.css"
-            ]
+              {
+                "glob": "**/*",
+                "input": "public",
+                "output": "/"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "/assets"
+              }
+            ],
+            "styles": ["src/styles.css"]
           }
         }
       }
