Manejo de las exceptions lanzadas del backend
o no sé cómo ponerlo pero se entiende

--- a/gestion-mercado/tsconfig.app.json
+++ b/gestion-mercado/tsconfig.app.json
@@ -8,7 +8,7 @@
   },
   "include": [
     "src/**/*.ts"
-  ],
+, "src/app/components/toast-component"  ],
   "exclude": [
     "src/**/*.spec.ts"
   ]
